--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,10 @@
         <activity android:name=".EventsActivity" />
         <activity android:name=".AboutActivity"/>
         <activity android:name=".ProfileActivity"/>
+        <activity android:name=".CreatePostActivity"/>
 
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
